--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,93 +1,24 @@
-body {
-  background-color: #2c3e50;
-  color: #fff;
-  font-family: 'Arial', sans-serif;
-}
-
-h1 {
-  color: #e67e22;
-}
-
-#userInfo {
-  margin: 20px 0;
-  padding: 10px;
-  background-color: #34495e;
-  border: 2px solid #e67e22;
-  border-radius: 5px;
-}
-
-#userName, #userAge, #userRace, #userClass {
-  font-weight: bold;
-  color: #e67e22;
-}
-
-#scene {
-  font-size: 200%;
-  margin: 20px 0;
-  padding: 10px;
-  background-color: #2e4053;
-  border: 2px solid #e67e22;
-  border-radius: 5px;
-}
-
-#death-scene {
-  font-size: 200%;
-  margin: 20px 0;
-  padding: 10px;
-  background-color: #2e4053;
-  border: 2px solid #e67e22;
-  border-radius: 5px;
-}
-
-#optionsForm {
-  margin: 20px 0;
-}
-
-legend {
-  font-size: 140%;
-  font-weight: bold;
-  color: #e67e22;
-}
-
-#optionsList {
+#hero-container {
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
-  font-size: 150%;
+  align-items: center;
+  justify-content: center;
+  width: 1300px;
 }
 
-label {
-  color: #e67e22;
-  margin-left: 5px;
+#hero-motto h1 {
+  font-family: 'Ultra', serif;
+  font-size: 250%;
+  color: #ccced0;
 }
 
-input[type='radio'] {
-  margin-right: 5px;
+#hero-motto h2 {
+  font-family: 'Red Hat Display', sans-serif;
+  color: #404f63;
 }
 
-button {
-  background-color: #e67e22;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-button:hover {
-  background-color: #d35400;
-}
-
-div#userInfo p {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-span {
-  font-weight: bold;
-  color: #e67e22;
-}
-
-button {
-  margin-top: 1rem;
+#hero-image {
+  padding: 2rem;
+  width: 750px;
 }
