--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -3,3 +3,15 @@
   padding: 4rem;
   border-radius: 1rem;
 }
+
+.form-title {
+  font-family: 'Ultra', serif;
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+#create-submit {
+  margin-top: 1rem;
+  height: 3rem;
+}
