--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -15,3 +15,10 @@
   margin-top: 1rem;
   height: 3rem;
 }
+
+.card-selection-title {
+  color: #333;
+  width: 5rem;
+  margin: 0;
+  padding: 0;
+}
