--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -1,7 +1,9 @@
 #create-form {
   background-color: #9bc2c6;
   padding: 4rem;
+  margin-top: 4rem;
   border-radius: 1rem;
+  width: 1300px;
 }
 
 .form-title {
@@ -12,13 +14,10 @@
 }
 
 #create-submit {
-  margin-top: 1rem;
   height: 3rem;
 }
 
 .card-selection-title {
   color: #333;
   width: 5rem;
-  margin: 0;
-  padding: 0;
 }
