--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -1,7 +1,7 @@
 #create-form {
   background-color: #9bc2c6;
   padding: 4rem;
-  margin-top: 4rem;
+  margin: 6rem auto;
   border-radius: 1rem;
   width: 1300px;
 }
