--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,9 +1,10 @@
 #hero-container {
-  margin-top: 6rem;
+  margin: 6rem auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 1300px;
 }
 
