--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -1,9 +1,13 @@
-#create-form {
-  background-color: #9bc2c6;
-  padding: 4rem;
+#create-container {
   margin: 6rem auto;
-  border-radius: 1rem;
   width: 1300px;
+  display: flex;
+}
+
+#create-form {
+  padding: 4rem;
+  border-radius: 1rem;
+  background-color: #9bc2c6;
 }
 
 .form-title {
@@ -20,4 +24,20 @@
 .card-selection-title {
   color: #333;
   width: 5rem;
+}
+
+#create-left {
+  width: 50%;
+}
+
+#create-right {
+  width: 50%;
+  position: relative;
+}
+
+.class-image-logo {
+  position: absolute;
+  width: 10rem;
+  right: 3rem;
+  top: 2rem;
 }
