--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -35,9 +35,22 @@
   position: relative;
 }
 
-.class-image-logo {
+.image-logo {
   position: absolute;
   width: 10rem;
   right: 3rem;
   top: 2rem;
+}
+
+#create-right h3 {
+  position: absolute;
+  width: 25rem;
+  left: 4.5rem;
+  bottom: 3.5rem;
+  font-size: 250%;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+  color: #9A3B3B;
+  border: 2px solid #9A3B3B;
+  border-radius: 1rem 2rem;
 }
