updated Hero styling responsiveness

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -54,17 +54,19 @@
 @media only screen and (min-width: 801px) and (max-width: 1000px) {
   #hero-container {
     max-width: 750px;
+    min-height: auto;
   }
 }
 
 @media only screen and (min-width: 551px) and (max-width: 800px) {
   #hero-container {
     max-width: 540px;
+    min-height: auto;
   }
 
   #hero-image {
-    padding: 3rem 1rem 1rem;
-    width: 550px;
+    width: 540px;
+    border-radius: 0.5rem 2rem;
   }
 
   #hero-motto h1 {
@@ -76,36 +78,41 @@
   }
 
   #button-container {
-    padding: 2rem 0;
+    margin: 2rem 0 0;
   }
 
   #create-button {
     width: 90%;
-    height: 3rem;
   }
 }
 
 @media only screen and (max-width: 550px) {
   #hero-container {
     max-width: 400px;
-    padding: 0 8px;
+    min-height: auto;
   }
 
   #hero-image {
     width: 400px;
   }
 
-  #hero-motto h2 {
-    font-size: 120%;
-  }
-
-  #button-container {
+  #hero-motto h1 {
+    font-size: 200%;
     padding: 1rem 0;
   }
 
+  #hero-motto h2 {
+    font-size: 110%;
+  }
+
+  #hero-image {
+    margin: 2rem 0;
+    width: 800px;
+    border-radius: 0.5rem 2rem;
+  }
+
   #create-button {
-    width: 90%;
-    height: 3rem;
+    width: 100%;
   }
 }
 
