--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 0 auto;
+  margin: 0 auto 1rem;
   width: 1300px;
   font-size: 110%;
 }
