updated application theme colors

--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -10,18 +10,24 @@
 }
 
 #create-form {
-  padding: 2rem;
-  border-radius: 0.5rem;
-  background-color: #a8a8a8;
+  padding: 1rem 2rem;
+  background-color: #b19470;
+  width: 80%;
+}
+
+#create-left,
+#create-right {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #create-left {
-  width: 50%;
   padding: 2rem 3rem;
 }
 
 #create-right {
-  width: 50%;
   position: relative;
 }
 
@@ -35,10 +41,12 @@
 
 #create-submit {
   height: 3rem;
+  font-size: 110%;
+  background-color: #b8621b;
 }
 
 .card-selection-title {
-  color: #333;
+  color: #43766C;
   width: 5rem;
 }
 
@@ -62,4 +70,44 @@
   border: 2px solid #9a3b3b;
   border-radius: 1rem 2rem;
   background-color: rgb(220, 220, 220);
+}
+
+@media only screen and (min-width: 1221px) and (max-width: 1440px) {
+  #create-container {
+    max-width: 1200px;
+  }
+}
+
+@media only screen and (min-width: 1001px) and (max-width: 1220px) {
+  #create-container {
+    max-width: 950px;
+  }
+}
+
+@media only screen and (min-width: 801px) and (max-width: 1000px) {
+  #create-container {
+    max-width: 750px;
+    min-height: auto;
+  }
+}
+
+@media only screen and (min-width: 551px) and (max-width: 800px) {
+  #create-container {
+    max-width: 540px;
+    min-height: auto;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  #create-container {
+    max-width: 400px;
+    min-height: auto;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #create-container {
+    max-width: 350px;
+    padding: 0 4px;
+  }
 }
