--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700&family=Ultra&family=Merriweather:wght@300;400;700family=Roboto+Mono:ital,wght@0,300;0,400;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700&family=Ultra&family=Oooh+Baby&family=Merriweather:wght@300;400;700&family=Roboto+Mono:ital,wght@0,300;0,400;0,700;1,100&display=swap');
 
 body {
   margin: 0;
