--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -28,6 +28,7 @@
   margin: 2rem 0;
   width: 800px;
   border-radius: 1rem 4rem;
+  box-shadow: rgba(255, 255, 255, 1) 0px 5px 15px;
 }
 
 #button-container {
