--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -13,7 +13,7 @@
   padding: 1rem 2rem;
   background-color: #b19470;
   width: 80%;
-  box-shadow: rgba(207, 94, 14, 0.5) 0px 0px 0px 3px;
+  border: 5px solid #662c05;
 }
 
 #create-left,
@@ -43,7 +43,7 @@
 #create-submit {
   height: 3rem;
   font-size: 110%;
-  background-color: #b8621b;
+  background-color: #9d5215;
 }
 
 .card-selection-title {
