--- a/src/styles/SelectionCard.css
+++ b/src/styles/SelectionCard.css
@@ -17,5 +17,5 @@
 #card-area {
   border-radius: 30% 10%;
   margin: 2rem 3rem;
-  box-shadow: 0 0 200px #0b1f1b inset
+  box-shadow: 0 0 200px #0b1f1b inset;
 }
