--- a/src/styles/Create.css
+++ b/src/styles/Create.css
@@ -59,36 +59,81 @@
   filter: drop-shadow(0 0 6px rgb(92, 16, 16));
 }
 
-#create-right h3 {
-  position: absolute;
-  width: 25rem;
-  left: 4.5rem;
-  bottom: 3.5rem;
-  font-size: 250%;
-  text-align: center;
-  font-family: 'Merriweather', serif;
-  color: #aa5656;
-  border: 2px solid #aa5656;
-  border-radius: 1rem 2rem;
-  background-color: rgb(220, 220, 220);
-}
-
 @media only screen and (min-width: 1221px) and (max-width: 1440px) {
   #create-container {
     max-width: 1200px;
+  }
+
+  #create-left {
+    padding: 2rem 1rem;
+  }
+
+  #create-right h3 {
+    width: 22rem;
+    font-size: 200%;
   }
 }
 
 @media only screen and (min-width: 1001px) and (max-width: 1220px) {
   #create-container {
     max-width: 950px;
+    min-height: auto;
+  }
+
+  #create-left {
+    padding: 0;
+    width: 40%;
+  }
+
+  #create-form {
+    width: 90%;
+  }
+
+  .form-title {
+    font-size: 160%;
+  }
+
+  .image-logo {
+    width: 7rem;
+  }
+
+  #create-right {
+    width: 60%;
   }
 }
 
-@media only screen and (min-width: 801px) and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
   #create-container {
     max-width: 750px;
+    background-color: white;
+    box-shadow: 0 0 200px #0b1f1b inset;
     min-height: auto;
+  }
+
+  #create-left {
+    width: 40%;
+  }
+
+  #create-right {
+    width: 60%;
+  }
+
+  .form-title {
+    font-size: 160%;
+  }
+
+  .image-logo {
+    width: 8rem;
+    right: 5rem;
+    top: 7rem;
+  }
+
+  #create-form {
+    width: 100%;
+    border: none;
+    padding: 0;
+    margin: 0;
+    background: transparent;
   }
 }
 
