--- a/src/styles/QuestForge.css
+++ b/src/styles/QuestForge.css
@@ -10,7 +10,11 @@
   background-repeat: no-repeat;
 }
 
-/* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> 
+Code snipper of loader is from the url below:
+https://css-loaders.com/dots/
+*/
+
 .loader {
   position: absolute;
   left: 13rem;
